<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="10%p"
    android:keyHeight="68dp"
    >

    <Row>
        <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
        <Key android:codes="119" android:keyLabel="w" />
        <Key android:codes="101" android:keyLabel="e" android:popupKeyboard="@xml/accent_long_e"/>
        <Key android:codes="114" android:keyLabel="r" />
        <Key android:codes="116" android:keyLabel="t" />
        <Key android:codes="121" android:keyLabel="y" />
        <Key android:codes="117" android:keyLabel="u" android:popupKeyboard="@xml/accent_u"/>
        <Key android:codes="105" android:keyLabel="i" android:popupKeyboard="@xml/accent_long_i"/>
        <Key android:codes="111" android:keyLabel="o" />
        <Key android:codes="112" android:keyLabel="p" android:keyEdgeFlags="right"/>
    </Row>

    <Row>
        <Key android:codes="97" android:keyLabel="a" android:popupKeyboard="@xml/accent_long_a" android:horizontalGap="5dp" />
        <Key android:codes="115" android:keyLabel="s" android:horizontalGap="5dp" android:popupKeyboard="@xml/accent_s" />
        <Key android:codes="100" android:keyLabel="d" android:horizontalGap="5dp"/>
        <Key android:codes="102" android:keyLabel="f" android:horizontalGap="5dp"/>
        <Key android:codes="103" android:keyLabel="g" android:popupKeyboard="@xml/accent_g" android:horizontalGap="5dp"/>
        <Key android:codes="104" android:keyLabel="h" android:horizontalGap="5dp"/>
        <Key android:codes="106" android:keyLabel="j" android:horizontalGap="5dp"/>
        <Key android:codes="107" android:keyLabel="k" android:popupKeyboard="@xml/accent_k" android:horizontalGap="5dp"/>
        <Key android:codes="108" android:keyLabel="l" android:popupKeyboard="@xml/accent_l" android:horizontalGap="5dp"/>
    </Row>

    <Row>
        <Key android:codes="-1" android:keyLabel="@string/shift" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
        <Key android:codes="122" android:keyLabel="z" android:popupKeyboard="@xml/accent_z"/>
        <Key android:codes="120" android:keyLabel="x" />
        <Key android:codes="99" android:keyLabel="c" android:popupKeyboard="@xml/accent_c"/>
        <Key android:codes="118" android:keyLabel="v" />
        <Key android:codes="98" android:keyLabel="b" />
        <Key android:codes="110" android:keyLabel="n" android:popupKeyboard="@xml/accent_n" />
        <Key android:codes="109" android:keyLabel="m" />
        <Key android:codes="-5" android:keyLabel="@string/erase" android:keyWidth="15%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>

    <Row>
        <Key android:codes="-2" android:keyLabel="@string/special_chars_key" android:keyWidth="15%p" android:keyEdgeFlags="left" />
        <Key android:codes="44" android:keyLabel="," />
        <Key android:codes="-10" android:keyLabel="@string/world" />
        <Key android:codes="62" android:keyLabel="Space" android:keyWidth="40%p" />
        <Key android:codes="46" android:keyLabel="." />
        <Key android:codes="-4" android:keyLabel="@string/check" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
    </Row>

</Keyboard>
